--- a/env.example
+++ b/env.example
@@ -4,6 +4,25 @@ USE_WEBHOOK=false
 WEBHOOK_URL=https://your-domain.com/webhook
 CHANNEL_ID=@test_channel_w_bot
 
+# Webhook Server Configuration
+# ВАЖНО: WEBHOOK_URL должен заканчиваться на /webhook!
+WEBHOOK_HOST=127.0.0.1
+WEBHOOK_PORT=8000
 
 # Optional: Logging Level
 LOG_LEVEL=INFO
+
+# Примеры настроек:
+# 
+# Для локального тестирования:
+# USE_WEBHOOK=true
+# WEBHOOK_URL=https://your-domain.com/webhook
+# WEBHOOK_HOST=127.0.0.1
+# 
+# Для продакшена:
+# USE_WEBHOOK=true
+# WEBHOOK_URL=https://yourdomain.com/webhook
+# WEBHOOK_HOST=0.0.0.0
+# 
+# Для разработки (без webhook):
+# USE_WEBHOOK=false
