fixed work with csv files

--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -13,8 +13,15 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+# Создаем пользователя bot с правильными правами
 RUN useradd --create-home --shell /bin/bash bot && \
     chown -R bot:bot /app
+
+# Создаем директорию для логов с правильными правами доступа
+RUN mkdir -p /app/logs && \
+    chown -R bot:bot /app/logs && \
+    chmod 755 /app/logs
+
 USER bot
 
 EXPOSE 8000
