--- a/env.example
+++ b/env.example
@@ -4,6 +4,9 @@ USE_WEBHOOK=false
 WEBHOOK_URL=https://your-domain.com/webhook
 CHANNEL_ID=@test_channel_w_bot
 
+# CSV Storage Configuration
+CSV_FILE_PATH=/app/logs/message_mapping.csv
+
 # Webhook Server Configuration
 # ВАЖНО: WEBHOOK_URL должен заканчиваться на /webhook!
 WEBHOOK_HOST=127.0.0.1
